fixed file path errors and added initial css styles.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- This is where our React app will go -->
   </div>
 
-</body>
 
+  <script src="../bootstrap.min.js"></script>
+</body>
 </html>
